# meson

./: .appveyor.yml  .buildinfo  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .mailmap  .mypy.ini  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  0001-tests-include-time-of-test-execution.patch  CODEOWNERS  DO_NOT_SUBMIT  MANIFEST.in  README.md  TODO.md  __main__.py  authors.txt  azure-pipelines.yml  backends.py  bparser.py  build.py  builder.py  builder_install.py  builder_test.py  builderparser.py  commandrunner.py  compile_meson.py  compilers.py  contributing.md  contributing.txt  coredata.py  create_release.sh  cross_test_log.txt  delwithsuffix.py  dependencies.py  (+86 more)
docs/: .editorconfig  README.md  gendocref.py  genrefman.py  genrelnotes.py  hotdoc.json  jsonvalidator.py  meson.build  meson_options.txt  runprogram.py  sitemap.txt  validatelinks.py
docs/extensions/: refman_links.py
docs/markdown/: ARM-performance-test.md  About.md  Adding-arguments.md  Adding-new-projects-to-wrapdb.md  Additional.md  Android-module.md  Build-options.md  Build-system-converters.md  Build-targets.md  Builtin-options.md  CMake-module.md  Code-formatting.md  Codegen-module.md  Commands.md  Comparisons.md  Compiler-properties.md  Conference-presentations.md  Configuration.md  Configuring-a-build-directory.md  Contact-information.md  Continuous-Integration.md  Contributing.md  Corporate-users.md  Creating-Linux-binaries.md  Creating-OSX-packages.md  Creating-releases.md  Cross-compilation.md  Cuda-module.md  Custom-build-targets.md  Cython.md  D.md  Dependencies.md  Design-rationale.md  Disabler.md  Distributors.md  Dlang-module.md  Donating.md  External-Project-module.md  External-commands.md  FAQ.md  (+159 more)
docs/markdown/Release-notes-for-0.43.0/: 001-boost-platform-improvement.md  001-generator-capture.md
docs/markdown/snippets/: 32bitmsi.md  Cross_compilation_with_C2000_toolchain_supports_CLA_files.md  about_minimum_python_version.md  add-external-program-cmd-array.md  add_arguments_cross.md  add_b_profile_option.md  add_c17_and_c18_standards.md  add_compcert_compiler.md  add_compile_backend_arg.md  add_counted_by_attribute.md  add_custom_targeT_output_templates_for_many_files.md  add_dict_values.md  add_dictionary_variable_key.md  add_dist_args.md  add_docdir_builtin_option.md  add_external-program_cmd-array.md  add_fallback_argument_to_subproject_get_variable.md  add_filter_and_filter_out.md  add_foo_script_type_additions.md  add_formatter.md  add_fstring_like_format.md  add_gdb_path.md  add_install_script.md  add_lang_kwarg_to_files.md  add_llvm_wasm_ld_support.md  add_meson_compile_target.md  add_metrowerks_compiler.md  add_microchip_xc32_compiler.md  add_native_both.md  add_nvidia_hpc_sdk_compilers.md  add_optimization_plain_option.md  add_os2.md  add_project_dependencies.md  add_release_note_snippets_here  add_str_splitlines_method.md  add_support_for_ibm_clang_for_AIX.md  add_test_suite.md  add_zos_support.md  additional-message-kwargs.md  additional_string_checks.md  (+877 more)
docs/markdown_dynamic/: Commands.md
docs/refman/: generatorbase.py  generatorjson.py  generatorman.py  generatormd.py  generatorpickle.py  generatorprint.py  generatorqthelp.py  generatortypes.py  generatorvim.py  jsonschema.py  loaderbase.py  loaderpickle.py  loaderyaml.py  main.py  model.py
docs/refman/templates/: args.mustache  dummy.mustache  func.mustache  meson.vim.mustache  notes.mustache  object.mustache  root.functions.mustache  root.mustache  root_link.mustache  taggs.mustache
docs/sphinx/: conf.py.in  docs_includes.py  meson_domain.py  refman_links.py  run_sphinx.py  sitemap.py
docs/sphinx/_static/: custom.css
docs/sphinx/_templates/: footer_center.html
docs/yaml/builtins/: build_machine.yaml  host_machine.yaml  meson.yaml  target_machine.yaml
docs/yaml/elementary/: any.yaml  array.yml  bool.yml  dict.yml  int.yml  list.yml  str.yml  void.yml
docs/yaml/functions/: _build_target_base.yaml  _build_target_linkable.yaml  add_global_arguments.yaml  add_global_link_arguments.yaml  add_languages.yaml  add_project_arguments.yaml  add_project_dependencies.yaml  add_project_link_arguments.yaml  add_test_setup.yaml  add_test_suite.yaml  alias_target.yaml  assert.yaml  benchmark.yaml  both_libraries.yaml  build_target.yaml  compiled_objects.yaml  configuration_data.yaml  configure_file.yaml  custom_target.yaml  debug.yaml  declare_dependency.yaml  default.yaml  dependency.yaml  disabler.yaml  environment.yaml  error.yaml  executable.yaml  file_argument.yaml  files.yaml  find_program.yaml  generator.yaml  get_option.yaml  get_variable.yaml  import.yaml  include_directories.yaml  install_data.yaml  install_emptydir.yaml  install_headers.yaml  install_man.yaml  install_subdir.yaml  (+28 more)
docs/yaml/objects/: alias_tgt.yaml  both_libs.yaml  build_tgt.yaml  cfg_data.yaml  compiled_objs.yaml  compiler.yaml  custom_idx.yaml  custom_tgt.yaml  default.yaml  dep.yaml  disabler.yaml  env.yaml  exe.yaml  external_program.yaml  extracted_obj.yaml  feature.yaml  file.yaml  file_arg.yml  generated_list.yaml  generator.yaml  inc.yaml  jar.yaml  lib.yaml  module.yaml  range.yaml  rsp_file.yaml  run_tgt.yaml  (+6 more)
manual tests/1 wrap/: meson.build
manual tests/2 multiwrap/: meson.build  prog.c
manual tests/3 standalone binaries/: build_linux_package.sh  build_osx_package.sh  linux_bundler.sh  meson.build  myapp.cpp  osx_bundler.sh
manual tests/6 qt4/: main.cpp  mainWindow.h  manualinclude.cpp  manualinclude.h  meson.build  q4core.cpp
manual tests/7 vala composite widgets/: meson.build  mywidget.vala
manual tests/9 nostdlib/: meson.build
modtest/: main.cpp  meson.build  src0.ixx  src1.ixx  src10.ixx  src11.ixx  src12.ixx  src13.ixx  src14.ixx  src15.ixx  src16.ixx  src17.ixx  src18.ixx  src19.ixx  src2.ixx  src20.ixx  src21.ixx  src22.ixx  src23.ixx  src24.ixx  src25.ixx  src26.ixx  src27.ixx  src28.ixx  src29.ixx  src3.ixx  src30.ixx  src31.ixx  src32.ixx  src33.ixx  src34.ixx  src35.ixx  src36.ixx  src37.ixx  src38.ixx  src39.ixx  src4.ixx  src40.ixx  src41.ixx  src42.ixx  (+62 more)
(+6003 files in other folders)
