[metadata]
name = meson
version = attr: mesonbuild.coredata.version
description = A high performance build system
author = Jussi Pakkanen
author_email = jpakkane@gmail.com
url = https://mesonbuild.com
keywords =
  meson
  mesonbuild
  build system
  cmake
license = Apache License, Version 2.0
license_file = COPYING
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Build Tools
long_description = Meson is a cross-platform build system designed to be both as fast and as user friendly as possible. It supports many languages and compilers, including GCC, Clang, PGI, Intel, and Visual Studio. Its build definitions are written in a simple non-Turing complete DSL.

[options]
packages = find:
python_requires = >= 3.6
setup_requires =
  setuptools

[options.entry_points]
console_scripts =
  meson = mesonbuild.mesonmain:main

[options.extras_require]
progress =
  tqdm
typing =
  mypy
  typing_extensions; python_version <"3.8"

[options.package_data]
mesonbuild.scripts = cmd_or_ps.ps1

[options.packages.find]
include = mesonbuild, mesonbuild.*
exclude = *.data

[tool:pytest]
python_classes =
python_files =
    run_unittests.py
