project('vs modtest', 'cpp')

assert(meson.get_compiler('cpp').get_id() == 'msvc', 'This only works with the VS compiler.')

add_project_arguments('/experimental:module', language: 'cpp')

sources = files(
  'main.cpp',
  'src0.ixx',
  'src1.ixx',
  'src10.ixx',
  'src11.ixx',
  'src12.ixx',
  'src13.ixx',
  'src14.ixx',
  'src15.ixx',
  'src16.ixx',
  'src17.ixx',
  'src18.ixx',
  'src19.ixx',
  'src2.ixx',
  'src20.ixx',
  'src21.ixx',
  'src22.ixx',
  'src23.ixx',
  'src24.ixx',
  'src25.ixx',
  'src26.ixx',
  'src27.ixx',
  'src28.ixx',
  'src29.ixx',
  'src3.ixx',
  'src30.ixx',
  'src31.ixx',
  'src32.ixx',
  'src33.ixx',
  'src34.ixx',
  'src35.ixx',
  'src36.ixx',
  'src37.ixx',
  'src38.ixx',
  'src39.ixx',
  'src4.ixx',
  'src40.ixx',
  'src41.ixx',
  'src42.ixx',
  'src43.ixx',
  'src44.ixx',
  'src45.ixx',
  'src46.ixx',
  'src47.ixx',
  'src48.ixx',
  'src49.ixx',
  'src5.ixx',
  'src50.ixx',
  'src51.ixx',
  'src52.ixx',
  'src53.ixx',
  'src54.ixx',
  'src55.ixx',
  'src56.ixx',
  'src57.ixx',
  'src58.ixx',
  'src59.ixx',
  'src6.ixx',
  'src60.ixx',
  'src61.ixx',
  'src62.ixx',
  'src63.ixx',
  'src64.ixx',
  'src65.ixx',
  'src66.ixx',
  'src67.ixx',
  'src68.ixx',
  'src69.ixx',
  'src7.ixx',
  'src70.ixx',
  'src71.ixx',
  'src72.ixx',
  'src73.ixx',
  'src74.ixx',
  'src75.ixx',
  'src76.ixx',
  'src77.ixx',
  'src78.ixx',
  'src79.ixx',
  'src8.ixx',
  'src80.ixx',
  'src81.ixx',
  'src82.ixx',
  'src83.ixx',
  'src84.ixx',
  'src85.ixx',
  'src86.ixx',
  'src87.ixx',
  'src88.ixx',
  'src89.ixx',
  'src9.ixx',
  'src90.ixx',
  'src91.ixx',
  'src92.ixx',
  'src93.ixx',
  'src94.ixx',
  'src95.ixx',
  'src96.ixx',
  'src97.ixx',
  'src98.ixx',
  'src99.ixx',
)

executable('modtest', sources)
